external-crates/move/crates/move-compiler/tests/move_2024/typing/type_hole_no_inferrence_threaded.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04023]: invalid method call
  ┌─ tests/move_2024/typing/type_hole_no_inferrence_threaded.move:8:13
  │
6 │         let mut c: Cup<_> = any();
  │                        - Unable to infer type for method call. Try annotating this type
7 │         loop {
8 │             c.0.x();
  │             ^^^^^^^ Invalid method call
